Fixed sizes out of viewport

--- a/styles/filters-style.css
+++ b/styles/filters-style.css
@@ -105,7 +105,7 @@ body {
 	min-width: 70px;
 
 	margin: 12px 0px 0px 4px;
-	padding: 9px 12px;
+	padding: 1vh 2vw;
 
 	text-align: center;
 	font-family: 'Inter', sans-serif;
@@ -128,8 +128,8 @@ body {
 
 .size-filter {
 	margin: 0;
-	min-width: 50px;
-	font-size: 12px;
+	min-width: 0;
+	font-size: 3vw;
 	white-space: nowrap;
 }
 
